# dMath

./: .gitignore  CMakeLists.txt  README.md  Renderer.cpp  Renderer.h  TempMatrix.cpp  TempMatrix.h  Vector.h  dDensityPlot2D.cpp  dDensityPlot2D.h  dPlotMeshBase.cpp  dPlotMeshBase.h  dRungeKutta.cpp  dRungeKutta.h  dVectors.cpp  dVulkanMesh.cpp  dVulkanMesh.h  main.cpp
Core/: CMakeLists.txt  Matrix.h  Quaternion.h  Vector.cpp  Vector.h  dMatrix.h  dQuaternion.h  dVector.h  dVectorND.h  dVectorND_variadic.cpp  dVectorND_variadic.h  dVectors.cpp  dVectors.h  util.h
Core/benchmark/: CMakeLists.txt  vector.cpp
Core/test/: CMakeLists.txt  matrix.cpp  vector.cpp
NumerCalc/: CMakeLists.txt  dENO.cpp  dENO.h  dLaxFriedrichs1D.cpp  dLaxFriedrichs1D.h  dLaxFriedrichs2D.cpp  dLaxFriedrichs2D.h  dLeapFrog1D.cpp  dLeapFrog1D.h  dLeapFrog2D.cpp  dLeapFrog2D.h  dRichtmyer1D.cpp  dRichtmyer1D.h  dRichtmyer2D.cpp  dRichtmyer2D.h  dRungeKutta.cpp  dRungeKutta.h  dWENO2D.cpp  dWENO2D.h
cmake/: benchmark-download.cmake  benchmark.cmake
